outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-22_21-21-05/evaluations/problem_eval3406926273026302789_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defaulting to the nearest neighbor. The destination_bias dynamically adjusts based on how many nodes remain unvisited, making the destination more appealing as the tour nears completion but less aggressively than the original algorithm.}
                                                                                                                                                                                                                                                ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defaulting to the nearest neighbor. The destination_bias dynamically adjusts based on how many nodes remain unvisited, making the destination more appealing as the tour nears completion but less aggressively than the original algorithm.}
                                                                                                                                                                                                                                                ^
SyntaxError: unmatched '}'
